# progpy

./: .coverage  .gitignore  .sonar-project.properties  Estructuració.dia  Fases.md  README.md  TODO.md  dades_curriculum.ods  decret.sqbpro  decret.sql  main.py  missatgeria.py  primer.mdj  programacio.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: build.yml  build.yml.old  commit.yml  tests.yml
Test qt/prova_maquetacio/: principal.py  principal.pyproject
dades/: dades.db
dades/esquema/: esquema_bbdd.dia
dades_importar/: ambit.csv  compcclau.csv  competencies.csv  competencies.csv.ods  continguts_clau.csv  dimensions.csv
moduls prova/: .~lock.somefile.odt#  data.txt  datatable.py  decret.html  decret.json  decret.sqlite  doc.py  exportar_XML.py  json_prova.py  myfirstdocument.odt  prova_xml.xml  somefile.docx  somefile.odt  sql.py  sql_html.py  sql_html_prettytable.py  sql_html_tabulate.py  sql_json.py  sql_jsonAST.py  sql_pandoc.py  sql_xml.py
src/: bbdd.py  main.py  missatgeria.py  requirements.txt
src/dades/: dades.db
src/dades/esquema/: esquema_bbdd.dia
src/dades/plantilles/: EB.docx
src/moduls/: __init__.py  bbdd.py  missatgeria.py
src/progpy/: __init__.py  main.py  missatgeria.py
src/progpy/dades/: consulta_transversals  dades.db
src/progpy/moduls/: __init__.py  bbdd.py  curriculum.py  estudis.py  missatgeria.py  provesgui.py  test_estudis.py
tests/: .coverage  __init__.py  coverage.xml  test.db  test_bbdd.py  test_curriculum.py  test_estudis.py  test_missatgeria.py
(+12 files in other folders)
